# sports-messiest-news

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  config.ini  main.py  majorleagues_20192021.csv  majorleagues_articles.csv  majorleagues_english.csv  majorleagues_marketvalue.csv  majorleagues_news.csv  majorleagues_news_raw.csv  majorleagues_stats.csv  modules.py  nlp_pipeline.py  players.py  players_articles.py  players_stats.py  players_values.py  pyproject.toml  scaler.pkl  soccer_eda.html  soccer_eda.ipynb  team_scraping.ipynb  team_stats.py  test.csv  utils.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  majorleagues_marketvalue-checkpoint.csv  majorleagues_news-checkpoint.csv  majorleagues_stats-checkpoint.csv  majorleagues_teams_20182021-checkpoint.csv  players_20192021-checkpoint.csv  pyproject-checkpoint.toml
data/: majorleagues_20182021_playerstats.csv  majorleagues_20182021_teamstats.csv  majorleagues_20182021_values.csv  majorleagues_20192021.csv  majorleagues_20192021_combined.pkl  majorleagues_20192021_forumlinks.pkl
legacy/: Untitled.ipynb  majorleagues_marketvalue.csv  majorleagues_stats.csv  majorleagues_teams_20182021.csv  team_scraping.ipynb
silas_exec/: LICENSE.txt  README.txt  clean-metadata.json  feature-stats.json  metadata-settings.json  metadata.json  predictions.csv  predictions_text.csv  settings.json
silas_exec/data/: test.csv
silas_exec/json-schemata/: arithmetic-term-schema.json  bct-schema.json  (+10 more)
src/: players.py  players_articles.py  players_stats.py  players_values.py  team_stats.py
tests/: test_messiest_news.py
(+302 files in other folders)
