[tool.poetry]
name = "messiest_news"
version = "0.1.0"
description = ""
authors = ["kenghweeng <ngkenghwee@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.1"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
jupyter = "^1.0.0"
ipykernel = "^6.9.2"
jupyter_nbextensions_configurator = "^0.4.1"
jupyter-contrib-nbextensions = "^0.5.1"
requests = "^2.27.1"
jupyterlab = "^3.3.2"
selenium = "^4.1.3"
tqdm = "^4.63.0"
langdetect = "^1.0.9"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
